# aws-shell

./: .gitignore  README.md  improvements.md
python/: __main__.py  pyproject.toml  requirements.txt  run.sh
python/aws_shell/: __init__.py  app.py  cli.py  completer.py  config.py  lexer.py  style.py  toolbar.py  welcome.py
python/aws_shell/commands/: __init__.py  ai_cmd.py  base.py  cache.py  cloudformation.py  cloudfront.py  cloudwatch.py  cognito.py  dynamodb.py  ec2.py  ecs.py  elasticache.py  general.py  globalaccelerator.py  help_cmd.py  iam.py  kms.py  lambda_cmd.py  opensearch.py  python_cmd.py  rds.py  route53.py  s3.py  search_cmd.py  secrets.py  ses.py  sqs.py  ssm.py  sso.py  sts.py  vpc.py
python/aws_shell/docs/: llm_context.md
python/aws_shell/utils/: __init__.py  aws_session.py  output.py  pagination.py  search.py  table.py
scripts/: create-rds-export-role.sh
